--- a/setting_up_nodes.yml
+++ b/setting_up_nodes.yml
@@ -45,7 +45,11 @@
      enabled: yes
     with_items: "{{ services }}"
 
-  - name: Enabling Bridge Firewall Rule
+  - name: Enabling Bridge Firewall Rule in /etc/sysctl.conf
     become: true
-    shell: "echo '1' > /proc/sys/net/bridge/bridge-nf-call-iptables"
+    shell: "echo 'net.bridge.bridge-nf-call-iptables=1' >> /etc/sysctl.conf"
+
+  - name: Enabling Bridge Firewall Rule - Running sysctl -p
+    become: true
     shell: "sysctl -p"
+
